--- a/macros.tex
+++ b/macros.tex
@@ -1,9 +1,9 @@
-\let\first\iffalse
-\let\firstend\fi
-\let\second\iftrue
-\let\secondend\fi
-\let\third\iffalse
-\let\thirdend\fi
+\let\firstyear\iffalse
+\let\firstyearend\fi
+\let\secondyear\iftrue
+\let\secondyearend\fi
+\let\thirdyear\iffalse
+\let\thirdyearend\fi
 
 \def\DeclareAbbr#1#2{\def#1{\textsc{#2}\xspace}}
 \DeclareAbbr{\nls}{nls}
