update chapter 2 on information model selection

--- a/macros.tex
+++ b/macros.tex
@@ -1,8 +1,9 @@
-\let\firstyear\iffalse
-\let\firstyearend\fi
+\let\firstyear\iftrue
 \let\secondyear\iftrue
-\let\secondyearend\fi
 \let\thirdyear\iffalse
+
+\let\firstyearend\fi
+\let\secondyearend\fi
 \let\thirdyearend\fi
 
 \def\DeclareAbbr#1#2{\def#1{\textsc{#2}\xspace}}
