add smc path sampling chapter

--- a/thesis.tex
+++ b/thesis.tex
@@ -25,6 +25,7 @@ monofont = Consolas, monoscale = MatchLowercase,
   \input{chap/2-information}
   \input{chap/3-bayesian}
   \input{chap/4-computation}
+  \input{chap/5-smcpath}
 
   \backmatter
   \printbibliography
