add example part of smc path chapter

--- a/macros.tex
+++ b/macros.tex
@@ -7,22 +7,25 @@
 \let\thirdyearend\fi
 
 \def\DeclareAbbr#1#2{\def#1{\textsc{#2}\xspace}}
-\DeclareAbbr{\nls}{nls}
+\DeclareAbbr{\ess}{ess}
 \DeclareAbbr{\aic}{aic}
 \DeclareAbbr{\bic}{bic}
 \DeclareAbbr{\dic}{dic}
-\DeclareAbbr{\tic}{tic}
-\DeclareAbbr{\gic}{gic}
-\DeclareAbbr{\nic}{nic}
-\DeclareAbbr{\mdl}{mdl}
-\DeclareAbbr{\fpe}{fpe}
 \DeclareAbbr{\fic}{fic}
-\DeclareAbbr{\mle}{mle}
-\DeclareAbbr{\smc}{smc}
+\DeclareAbbr{\fpe}{fpe}
+\DeclareAbbr{\gic}{gic}
 \DeclareAbbr{\mcmc}{mcmc}
-\DeclareAbbr{\rjmcmc}{rjmcmc}
-\DeclareAbbr{\unix}{unix}
+\DeclareAbbr{\mdl}{mdl}
+\DeclareAbbr{\mle}{mle}
+\DeclareAbbr{\nic}{nic}
+\DeclareAbbr{\nls}{nls}
 \DeclareAbbr{\pet}{pet}
+\DeclareAbbr{\rjmcmc}{rjmcmc}
+\DeclareAbbr{\smc}{smc}
+\DeclareAbbr{\tic}{tic}
+\DeclareAbbr{\unix}{unix}
+
+\def\ESS{\text{\textsc{ess}}}
 
 \def\kl{Kullback-Leibler divergence\xspace}
 \def\mha{Metropolis-Hastings algorithm\xspace}
@@ -45,8 +48,13 @@
 \def\bugs{\textsc{\sffamily bugs}\xspace}
 \def\jags{\textsc{\sffamily jags}\xspace}
 
-\def\calM{\mathcal{M}}
+\def\calGa{\mathcal{Ga}}
 \def\calK{\mathcal{K}}
+\def\calLN{\mathcal{LN}}
+\def\calL{\mathcal{La}}
+\def\calM{\mathcal{M}}
+\def\calN{\mathcal{N}}
+
 
 \def\bbN{\mathbb{N}}
 \def\bbR{\mathbb{R}}
@@ -56,3 +64,6 @@
 \def\bfY{\mathbfit{Y}}
 \def\bfy{\mathbfit{y}}
 \def\bfu{\mathbfit{u}}
+
+\def\x{\mathbfit{x}}
+\def\X{\mathbfit{X}}
