--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,5 @@
-\documentclass[11pt, a4paper, lines = 46, linespread = 1.05, hyper,
+\documentclass[11pt, a4paper, hyper,
+lines = 48, linespread = 1.05, typearearatio=0.75,
 bib, biblatexstyle = authoryear,
 mainfont = Minion, sansfont = Cronos, mathfont = MinionMath,
 monofont = Consolas, monoscale = MatchLowercase,
