change firstyearend etc to endfirstyear

--- a/macros.tex
+++ b/macros.tex
@@ -1,10 +1,10 @@
-\let\firstyear\iftrue
+\let\firstyear\iffalse
 \let\secondyear\iftrue
 \let\thirdyear\iffalse
 
-\let\firstyearend\fi
-\let\secondyearend\fi
-\let\thirdyearend\fi
+\let\endfirstyear\fi
+\let\endsecondyear\fi
+\let\endthirdyear\fi
 
 \def\DeclareAbbr#1#2{\def#1{\textsc{#2}\xspace}}
 \DeclareAbbr{\ess}{ess}
