--- a/thesis.tex
+++ b/thesis.tex
@@ -12,7 +12,10 @@ monofont = Consolas, monoscale = MatchLowercase,
 \setuphyper{pdfsubject   = {Bayesian model selection}}
 \setuphyper{pdfkeywords  = {Bayesian, model selection, Monte Carlo methods}}
 
-\title{Model selection and its computation techniques}
+\title{Using sequential Monte Carlo and path sampling for Bayesian model
+  selection}
+\subtitle{A review of existing methods and proposed new methodology for model
+  selection problems}
 \author{Yan Zhou}
 
 \begin{document}
