--- a/thesis.tex
+++ b/thesis.tex
@@ -12,9 +12,8 @@ monofont = Consolas, monoscale = MatchLowercase,
 \setuphyper{pdfsubject   = {Bayesian model selection}}
 \setuphyper{pdfkeywords  = {Bayesian, model selection, Monte Carlo methods}}
 
-\title{Using sequential Monte Carlo and path sampling for Bayesian model
-  selection}
-\subtitle{A review of existing methods and proposed new methodology for model
+\title{Bayesian model selection with sequential Monte Carlo and path sampling}
+\subtitle{Review of existing methods and proposal of new methodology for model
   selection problems}
 \author{Yan Zhou}
 
