--- a/thesis.tex
+++ b/thesis.tex
@@ -1,16 +1,9 @@
-\documentclass[11pt, a4paper, hyper,
-lines = 48, linespread = 1.05, typearearatio=0.75,
-bib, biblatexstyle = authoryear,
+\documentclass[11pt, a4paper, hyper, bib, biblatexstyle = authoryear,
+lines = 48, linespread = 1.03, typearearatio=0.75,
 mainfont = Minion, sansfont = Cronos, mathfont = MinionMath,
-monofont = Consolas, monoscale = MatchLowercase,
-]{mthesis}
-
+monofont = Consolas, monoscale = MatchLowercase]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
-\setuphyper{pdftitle     = {Model selection and its computation techniques}}
-\setuphyper{pdfauthor    = {Yan Zhou}}
-\setuphyper{pdfsubject   = {Bayesian model selection}}
-\setuphyper{pdfkeywords  = {Bayesian, model selection, Monte Carlo methods}}
 
 \title{Bayesian model selection with sequential Monte Carlo and path sampling}
 \subtitle{Review of existing methods and proposal of new methodology for model
