review chapter 3, bayesian model selection

--- a/macros.tex
+++ b/macros.tex
@@ -41,6 +41,8 @@
 \def\Xm{(X^1,\dots,X^m)}
 \def\bthm{(\bth^1,\dots,\bth^m)}
 \def\bThm{(\bTh^1,\dots,\bTh^m)}
+\def\vec#1#2{#1_1,\dots,#1_{#2}}
+\def\svec#1#2{#1^1,\dots,#1^{#2}}
 \def\mcvec#1#2{#1^{(1)},\dots,#1^{(#2)}}
 
 \def\calGa{\mathcal{Ga}}
