review chapter 5 smc path sampling

--- a/macros.tex
+++ b/macros.tex
@@ -10,6 +10,7 @@
 \DeclareAbbr{\fic}{fic}
 \DeclareAbbr{\fpe}{fpe}
 \DeclareAbbr{\gic}{gic}
+\DeclareAbbr{\ieee}{ieee}
 \DeclareAbbr{\mcmc}{mcmc}
 \DeclareAbbr{\mdl}{mdl}
 \DeclareAbbr{\mle}{mle}
