update thesis with new style files and add two pieces

--- a/pieces/rjsmc.tex
+++ b/pieces/rjsmc.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, bib, fontset = Lucida]{marticle}
+\documentclass[11pt, bib, fontset = Minion]{marticle}
 
 \def\mse{\textsc{mse}\xspace}
 \def\pet{\textsc{pet}\xspace}
