--- a/thesis.tex
+++ b/thesis.tex
@@ -1,13 +1,8 @@
-\documentclass[11pt, a4paper, hyper, bib, biblatexstyle = authoryear,
-lines = 46, linespread = 1.05, typearearatio=0.75,
-mainfont = Minion, sansfont = Cronos, mathfont = MinionMath,
-monofont = Consolas, monoscale = MatchLowercase]{mthesis}
+\documentclass[11pt, hyper, bib, fontset = Minion]{mthesis}
 \input{macros}
 \addbibresource{thesis.bib}
 
 \title{Bayesian model selection with sequential Monte Carlo and path sampling}
-\subtitle{Review of existing methods and proposal of new methodology for model
-  selection problems}
 \author{Yan Zhou}
 
 \begin{document}
