update bib file

--- a/pieces/library.bib
+++ b/pieces/library.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Sat, 28 Apr 2012.
+%% Created using Papers on Tue, 22 May 2012.
 %% http://mekentosj.com/papers/
 
 @article{Richardson:1997ea,
@@ -544,13 +544,6 @@ journal = {Statistics and Computing},
 year = {2008}
 }
 
-@article{Roberts:1997wf,
-author = {Roberts, Gareth O. and Gelman, A. and Gilks, Walter R.},
-title = {{Weak convergence and optimal scaling of random walk Metropolis algorithms}},
-journal = {The Annals of Applied Probability},
-year = {1997}
-}
-
 @article{Laskey:2003et,
 author = {Laskey, Kathryn Blackmond and Myers, James W},
 title = {{Population Markov chain Monte Carlo}},
@@ -614,7 +607,7 @@ year = {2003}
 
 @article{Haario:2001gu,
 author = {Haario, Heikki and Saksman, Eero and Tamminen, Johanna},
-title = {{An Adaptive Metropolis Algorithm}},
+title = {{An adaptive Metropolis algorithm}},
 journal = {Bernoulli},
 year = {2001}
 }
@@ -743,11 +736,25 @@ title = {{Estimating the integrated likelihood via posterior simulaiton using th
 year = {2006}
 }
 
+@article{DeanFang:2012gj,
+author = {Dean Fang, Yu-Hua and El Fakhri, Georges and Becker, John A and Alpert, Nathaniel M.},
+title = {{Parametric imaging with Bayesian priors: A validation study with 11C-Altropane PET}},
+journal = {NeuroImage},
+year = {2012}
+}
+
 @article{Kang:2011gg,
 author = {Kang, Jian and Johnson, Timothy D. and Nichols, Thomas E. and Wager, Tor D.},
 title = {{Meta Analysis of Functional Neuroimaging Data via Bayesian Spatial Point Processes.}},
 journal = {Journal of the American Statistical Association},
 year = {2011}
+}
+
+@article{Atchade:2010ha,
+author = {Atchad{\'e}, Yves F and Roberts, Gareth O. and Rosenthal, Jeffrey S},
+title = {{Towards optimal scaling of Metropolis-coupled Markov chain Monte Carlo}},
+journal = {Statistics and Computing},
+year = {2010}
 }
 
 @article{Parzen:1962tf,
@@ -895,6 +902,13 @@ journal = {Annals of the Institute of Statistical Mathematics},
 year = {1978}
 }
 
+@article{Roberts:1997dg,
+author = {Roberts, G. O. and Gelman, A. and Gilks, W. R.},
+title = {{Weak convergence and optimal scaling of random walk Metropolis algorithms}},
+journal = {The Annals of Applied Probability},
+year = {1997}
+}
+
 @article{Bernardo:1979uq,
 author = {Bernardo, Jos{\'e} M.},
 title = {{Reference posterior distributions for Bayesian inference}},
@@ -1032,6 +1046,13 @@ author = {Sawa, Takamitsu},
 title = {{Information criteria for discriminating among alternative regression models}},
 journal = {Econometrica: Journal of the Econometric Society},
 year = {1978}
+}
+
+@article{Roberts:2007wa,
+author = {Roberts, Gareth O. and Rosenthal, Jeffrey S},
+title = {{Coupling and ergodicity of adaptive Markov chain Monte Carlo algorithms}},
+journal = {Journal of Applied Probability},
+year = {2007}
 }
 
 @article{Chen:1995jn,
@@ -1179,6 +1200,13 @@ author = {Gustafsson, Fredrik},
 title = {{Particle filter theory and practice with positioning applications}},
 journal = {IEEE Aerospace and Electronic Systems Magazine},
 year = {2010}
+}
+
+@article{Roberts:2001ta,
+author = {Roberts, Gareth O. and Rosenthal, Jeffrey S},
+title = {{Optimal scaling for various Metropolis-Hastings algorithms}},
+journal = {Statistical Science},
+year = {2001}
 }
 
 @article{Bartlett:1963ty,
