fix the long header

--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 \input{macros}
 \addbibresource{thesis.bib}
 
-\title{Bayesian model selection with sequential Monte Carlo and path sampling}
+\title{Bayesian model comparison via sequential Monte Carlo and path sampling}
 \author{Yan Zhou}
 
 \begin{document}
