--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,9 @@
 \input{macros}
 \addbibresource{thesis.bib}
 
-\title{Bayesian model comparison via sequential Monte Carlo and path sampling}
+\title{Bayesian model comparison\\
+  sequential Monte Carlo\\
+  \& path sampling}
 \author{Yan Zhou}
 
 \begin{document}
